[package]
name = "vox_box"
version = "0.3.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml"]
description = "A tool to process speech audio in Rust"
documentation = "http://www.andrewchristophersmith.com/docs/vox_box/vox_box/index.html"
repository = "https://github.com/andrewcsmith/vox_box.rs"
readme = "README.md"
keywords = ["audio", "fft", "nlp"]
license = "MIT"

[lib]
name = "vox_box"
doctest = false
crate-type = ["dylib", "rlib"]

[dependencies]
num = "^0.3"
rand = "^0.7"
libc = "^0.2"
rustfft = "^4.0"

[dependencies.dasp]
version = "^0.11"
features = ["interpolate", "interpolate-linear", "signal", "signal-window", "signal-window-rectangle", "window-hanning", "slice"]

[dev-dependencies]
hound = "^3.4"

[dev-dependencies.dasp]
features = ["signal-window-hanning"]

[features]
nightly = []
